# hyperbolix

./: .gitignore  .pre-commit-config.yaml  404.html  DEVELOPER_GUIDE.md  LICENSE  OPTIMIZER_PLAN.md  README.md  handoff.md  idiomatic_jax.md  index.html  jax_migration.md  lorentz_conv_implementation_plan.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude/: JAX_MIGRATION.md  handoff.md  missing_test.md
.claude/jax_migration/: dtype-analysis.md  export_parity_data.py  phase-0-discovery.md  phase-1b-critical-fixes.md  phase-3-layers.md  phase-5-testing.md  phase-6-performance.md  phase-9-migration-utils.md  torch-inventory.md
.claude/jax_migration/baselines/: pytorch_parity_data_20250929_084242.pkl  pytorch_parity_data_20250929_084611.pkl  pytorch_parity_metadata_20250929_084242.json  pytorch_parity_metadata_20250929_084611.json
.codex/: AGENTS.md  JAX_MIGRATION.md  codebase.md
.codex/jax_migration/: phase-0-discovery.md  phase-1-architecture.md  phase-1-toolchain.md  phase-2-geometry.md  phase-3-layers.md  phase-4-optim.md  phase-5-testing.md  phase-6-cleanup.md  phase-7-visualization.md
.github/: ci.yaml  python-package-uv.yml
.github/workflows/: ci.yaml  docs.yml  publish.yml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/api-reference/distributions/: index.html
0.1/api-reference/manifolds/: index.html
0.1/api-reference/nn-layers/: index.html
0.1/api-reference/optimizers/: index.html
0.1/api-reference/utils/: index.html
0.1/changelog/: index.html
0.1/developer-guide/: index.html
0.1/getting-started/: index.html
0.1/mathematical-background/: index.html
0.1/search/: search_index.json
0.1/tutorials/: basic-manifold-ops.ipynb
0.1/user-guide/batching-jit/: index.html
0.1/user-guide/manifolds/: index.html
0.1/user-guide/nn-layers/: index.html
0.1/user-guide/numerical-stability/: index.html
0.1/user-guide/optimizers/: index.html
0.1/user-guide/training-workflows/: index.html
api-reference/distributions/: index.html
api-reference/manifolds/: index.html
api-reference/nn-layers/: index.html
api-reference/optimizers/: index.html
api-reference/utils/: index.html
benchmarks/: README.md  __init__.py  bench_manifolds.py  bench_mnist_hyperboloid.py  bench_mnist_layer_comparison.py  bench_mnist_poincare.py  bench_nn_layers.py  bench_shakespeare_attention.py  conftest.py  shakespeare_results.json  utils.py
changelog/: index.html
developer-guide/: index.html
docs/: changelog.md  developer-guide.md  getting-started.md  index.md  mathematical-background.md
docs/api-reference/: distributions.md  manifolds.md  nn-layers.md  optimizers.md  utils.md
docs/source/: conf.py  index.rst  manifolds.rst  math_utils.rst  optimizers.rst
docs/stylesheets/: extra.css
docs/user-guide/: batching-jit.md  manifolds.md  nn-layers.md  numerical-stability.md  optimizers.md  training-workflows.md
getting-started/: index.html
hyperbolix/distributions/: __init__.py  _common.py  _wrapped_normal_base.py  uniform_poincare.py  wrapped_normal_hyperboloid.py  wrapped_normal_poincare.py
hyperbolix/manifolds/: __init__.py  _base.py  euclidean.py  hyperboloid.py  isometry_mappings.py  poincare.py  precision.py  protocol.py
hyperbolix/nn_layers/: __init__.py  _helpers.py  hyperboloid_activations.py  hyperboloid_attention.py  hyperboloid_conv.py  hyperboloid_core.py  hyperboloid_linear.py  hyperboloid_positional.py  hyperboloid_regression.py  hyperboloid_regularization.py  hypformer.py  lorentz_conv.py  poincare_activations.py  poincare_conv.py  poincare_linear.py  poincare_regression.py  poincare_rl.py
hyperbolix/optim/: __init__.py  _riemannian_base.py  manifold_metadata.py  riemannian_adam.py  riemannian_sgd.py
hyperbolix/utils/: __init__.py  helpers.py  horo_pca.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api-reference/distributions/: index.html
latest/api-reference/utils/: index.html
latest/changelog/: index.html
latest/developer-guide/: index.html
latest/getting-started/: index.html
latest/mathematical-background/: index.html
latest/search/: search_index.json
latest/tutorials/: hyperbolic-nn.ipynb  riemannian-optimization.ipynb
mathematical-background/: index.html
search/: search_index.json
src/hyperbolix_jax/: __init__.py  config.py
src/manifolds/: __init__.py  euclidean.py  hyperboloid.py  manifold.py  poincare.py
src/nn_layers/: __init__.py  helpers.py  hyperbolic_standard_layers.py  hyperboloid_linear_layers.py  hyperboloid_regression_layers.py  poincare_linear_layers.py  poincare_regression_layers.py  poincare_rl_layers.py
src/optim/: __init__.py  riemannian_adam.py  riemannian_sgd.py
src/utils/: helpers.py  horo_pca.py  math_utils.py  vis_utils.py
tests/: conftest.py  test_class_based_manifolds.py  test_helpers.py  test_horo_pca.py  test_hyperboloid_activations.py  test_hyperboloid_conv.py  test_hyperboloid_positional.py  test_hypformer.py  test_isometry_mappings.py  test_lorentz_conv.py  test_manifolds.py  test_manifolds_jax.py  test_math_utils.py  test_nn_layers.py  test_optimizers.py  test_poincare_conv.py  test_poincare_linear_gradients.py  test_precision.py  test_regression_layers.py  test_uniform_poincare.py  test_wrapped_normal.py
tests/jax/: conftest.py  test_helpers.py  test_horo_pca.py  test_hyperboloid_activations.py  test_hyperboloid_conv.py  test_lorentz_conv.py  test_manifolds.py  test_math_utils.py  test_nn_layers.py  test_optimizers.py  test_regression_layers.py  test_wrapped_normal.py
tests/nn_layers/: test_hyperboloid_activations.py  test_hyperboloid_attention.py  test_hyperboloid_conv.py  test_hyperboloid_fgg.py  test_hyperboloid_positional.py  test_nn_layers.py  test_poincare_conv.py  test_poincare_linear_gradients.py  test_regression_layers.py
user-guide/batching-jit/: index.html
user-guide/manifolds/: index.html
user-guide/nn-layers/: index.html
user-guide/numerical-stability/: index.html
user-guide/optimizers/: index.html
user-guide/training-workflows/: index.html
wrapped_normal_implementation_guide/: implementation_guide.md
(+41 files in other folders)
