# GENERAL

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperbolix"
version = "0.1.0"
description = "Hyperbolic Deep Learning in JAX"
authors = [
    { name="Timo Klein", email="timo.klein@univie.ac.at" },
    { name="Thomas Lang", email="thomas.lang@univie.ac.at" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.91",
    "flax>=0.12.0",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optax>=0.2.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]



#----------------------------
# RUFF
#----------------------------

[tool.ruff]
# See https://beta.ruff.rs/docs/rules/
lint.select = ["E", "F", "B", "UP", "C90", "RUF"]
# B028: Ignore explicit stacklevel`
# RUF013: Too many false positives (implicit optional)
lint.ignore = ["B028", "RUF013", "F722", "F821"]

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

lint.mccabe.max-complexity = 15

# Exclude a variety of commonly ignored directories.
exclude = [
    "*.egg-info",
    "__pycache__",
    ".eggs",
    ".git",
    ".venv",
    "build/",
    ".ruff_cache",
    ".mypy_cache",
]

# Same as Black.
line-length = 127

[tool.black]
line-length = 127

[tool.isort]
profile = "black"
line_length = 127

[tool.setuptools.packages.find]
where = ["hyperbolix"]
include = ["hyperbolic_test*", "manifolds*", "utils*", "nn_layers*", "optim*", "distributions*"]


#----------------------------
# DEV
#----------------------------


[tool.pytest.ini_options]
addopts = "-ra -q" # --log-cli-level=DEBUG
testpaths = ["tests", "benchmarks"]
pythonpath = "hyperbolix"
# Collect benchmark files in addition to test files
python_files = ["test_*.py", "*_test.py", "bench_*.py"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "py-spy>=0.4.1",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.390",
    "ruff>=0.13.2",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
    "mkdocs-jupyter>=0.25.1",
    "mike>=2.1.3",
]


#----------------------------
# PYRIGHT
#----------------------------

[tool.pyright]
include = ["hyperbolix"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
